Fix css to have constant button spacing

--- a/src/stylesheets/map.less
+++ b/src/stylesheets/map.less
@@ -31,7 +31,7 @@ li.followed {
   right: 10px;
   z-index: 400;
 
-  &> :first-child {
+  & > :not(:last-child) {
     margin-right: 15px;
   }
 }
